Bug 1549625 - Avoid clobbering the visual scroll offset if the layout viewport shrinks in size r=kats

Differential Revision: https://phabricator.services.mozilla.com/D30434